# ddd_modular_monolith

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 06b91c8d1f47_add_stage_status_history.py  10bc574a62b6_init.py  1d9ba74046c2_upd.py  325bea76457e_upd_subpr_tmp_2.py  38a8186f8cd8_init.py  666c2fd831e0_d.py  7708818e40b9_upd_descriptions.py  84db50c2e2c5_init.py  85b3ff4dc896_init.py  864eac073847_add_cascade.py  8c2693eb8f54_add_files_to_stage_and_subproject.py  907f0d27abba_init.py  aa305922c687_init.py  bac044e82bd0_init.py  baf6a5b6b049_add_create_update_fields.py  d2598ea0dee1_upd_subpr_tmp_3.py  d6123eca6dff_upd_descriptions.py  e6fef1cf84c4_upd_subpr_tmp.py  e8262aa42cdb_add_create_update_fields.py
prometheus/: prometheus.yml
promtail/: promtail-config.yml
src/: main.py
src/common/: pagination.py
src/common/db/: base_models.py  counter.py
src/common/di/: container.py  filters.py
src/common/exceptions/: application.py  infrastructure.py
src/common/guards/: permission.py
src/common/litestar_/: exception_handlers.py
src/common/litestar_/controllers/: download.py
src/common/litestar_/di/: filters.py  message_bus.py
src/common/litestar_/monitoring/: prometheus.py
src/common/loggers/: config.py  filters.py
src/common/loggers/formatters/: console.py  loki.py
src/common/message_bus/: broker.py  interfaces.py  message_bus.py  schemas.py
src/common/storage/: s3.py
src/loggers/: config.py
src/loggers/formatters/: colors.py  console.py  loki.py
src/project_service/application/: __init__.py  protocols.py
src/project_service/application/events/: project.py  stage.py
src/project_service/application/handlers/: stage.py
src/project_service/application/services/: store.py
src/project_service/di/: minio_client.py  uow.py
src/project_service/presentation/: pagination.py
src/user_service/: config.py
src/user_service/application/: __init__.py  events.py  protocols.py
src/user_service/di/: uow.py
src/user_service/domain/: exceptions.py
src/user_service/presentation/: pagination.py
tests/domain/project/: test_add_subproject.py  test_create.py  test_progress.py
(+105 files in other folders)
