[project]
name = "tmp-ddd-modular-monolith"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "aioboto3>=15.0.0",
    "aiocache>=0.12.3",
    "alembic>=1.16.4",
    "asyncpg>=0.30.0",
    "dishka>=1.5.3",
    "faststream[rabbit]>=0.5.47",
    "litestar[jwt,prometheus]>=2.16.0",
    "loguru>=0.7.3",
    "minio>=7.2.16",
    "passlib[argon2]>=1.7.4",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "python-jose>=3.4.0",
    "sqlalchemy[asyncio]>=2.0.40",
    "types-aiobotocore-s3>=2.23.2",
    "types-aiobotocore[s3]>=2.23.2",
    "uvicorn[standard]>=0.35.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.4",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
line-length = 120
